--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sweetalert2": "^11.3.4",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "homepage": "https://kausjulian.github.io/clase3637"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
